<resources>
    <string name="app_name">Manage Buddy</string>
    <string name="easy_to_treack">Easy to track</string>
    <string name="send_reminders_to_yours_friends">Send reminders to yours friends</string>
    <string name="a_simple_layout_for_improved_productivity">A simple layout for improved \n productivity</string>
    <string name="no_one_can_forget_what_you_asked_for">No one can forget what \n you asked for</string>
    <string name="self_check">Self Check</string>
    <string name="next">Next</string>
    <string name="track_your_productivity">Track your productivity</string>
    <string name="easy_widget">Easy Widget</string>
    <string name="manage_your_tasks_in_the_simplest_way">Manage your tasks in the \n simplest way</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="enter_email_eddress">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hey_welcome_back">Hey,welcome back!</string>
    <string name="let_get_started">Let\'s get started!</string>
    <string name="enter_name">Enter Name</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="sign_up">Sign Up</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="terms_nd_conditions"><![CDATA[Terms &conditions]]></string>
    <string name="by_signing_up_you_agree_to_the">By signing up,you agree to the</string>
    <string name="filter">Filter</string>
    <string name="reminder">Task</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_progress_so_far">Your progress so far</string>
    <string name="you_have_nothing_aligned_for_tomorrow">You have nothing aligned for tomorrow</string>
    <string name="click_here_to_add_something">Click here to add something</string>
    <string name="tap_and_hold_the_card_for_more_options">Tap and hold the card for more options</string>
    <string name="assigned_to">Assigned to</string>
    <string name="we_ll_send_you_a_reset_link_to_your_mail">We\'ll send you a reset link to your mail</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_a_new_password_for_this_account">Enter a new password for this account</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="email">Email*</string>
    <string name="name">Name*</string>
    <string name="adding_someone_is_one_time_process">*Adding someone is one time process.</string>
    <string name="once_you_have_added_someone_then_you_just_need_to_n_select_them_from_the_list_from_the_next_time">Once you have added someone then you just need to \n select them from the list from the next time</string>
    <string name="invite">Invite</string>
    <string name="edit">Edit</string>
    <string name="assign">Assign</string>
    <string name="seems_like_you_to_add_peopleto_your_friends_list">Seems like you to add peopleto your friends list</string>
    <string name="whom_would_you_like_to_assign_this_task_to">Whom would you like to assign this task to?</string>
    <string name="search">Search</string>
    <string name="not_registered_yet">Not Registered yet</string>
    <string name="invite_again">Invite again</string>
    <string name="we_have_sent_you_n_a_password_reset_link">We have sent you \n a password reset link</string>
    <string name="check_your_inbox_for_further_instructions">Check your inbox for further instructions</string>
    <string name="back_to_login">Back to login</string>
    <string name="assign_task_to">Assign Task to</string>
    <string name="what_should_i_remind_you_about">What should i remind you about?</string>
    <string name="what_time_should_i_remind_you_this">What time should i remind you this?</string>
    <string name="what_day_should_i_remind_you_this">What day should i remind you this?</string>
    <string name="how_should_i_remind_you_this">How should i remind you this?</string>
    <string name="assign_to">Assign to</string>
    <string name="save_for_me">Save for me</string>
    <string name="alarm">Alarm</string>
    <string name="ring_a_bell">Ring a bell</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="repetitions">Repetitions</string>
    <string name="once">Once</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="time_is_in_12_hour_clock">Time is in 12 hour clock</string>
    <string name="change">Change</string>
    <string name="has_assigned_you_a_task">has assigned you a task</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="assigned_task">Assigned Task</string>
    <string name="you_have_successfully_n_assigned_the_task">You have successfully \n assigned the task</string>
    <string name="go_to_home">Go to home</string>
    <string name="add_more_tasks">Add more tasks</string>
    <string name="already_have_some_n_other_tasks_planned_for_the_n_selected_time">Already have some \n other tasks planned for the \n selected time</string>
    <string name="would_you_like_to_edit_the_time_you_are_assinging">Would you like to edit the time you are assinging</string>
    <string name="edit_time">Edit Time</string>
    <string name="assign_anyways">Assign anyways</string>
    <string name="edit_personal_info">Edit personal info</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="all_completed_task">All Completed Task</string>
    <string name="record_are_available_for">Record are available for</string>
    <string name="past_30_days">Past 30 days</string>
    <string name="assigned_by">Assigned by</string>
    <attr name="widgetTitle" format="string" />
    <attr name="widgetContent" format="string" />
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="password_must_min_4_and_max_30_char_alphanumeric_combination">*Password Must Min 4 and Max 30 char - Alphanumeric combination</string>
    <string name="ok">Ok</string>
</resources>