<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/we_ll_send_you_a_reset_link_to_your_mail"
            android:textColor="@color/grey_text"
            android:textSize="13sp"
            android:textStyle="bold" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:drawableStart="@drawable/email"
                android:drawablePadding="15dp"
                android:hint="@string/enter_email_eddress"
                android:inputType="textEmailAddress"
                android:maxLength="60"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_text"
                android:textSize="14sp" />





        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="50dp"
            app:iconGravity="textStart"
            app:iconSize="25dp" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>