<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.WelcomeActivity">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pagers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:gravity="end"

        android:layout_margin="25dp"
        android:textColor="@color/grey_text"
        android:textSize="16sp"
        android:textStyle="bold" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dotsColor="@color/grey_text"
            app:dotsCornerRadius="8dp"
            app:dotsSize="14sp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            app:dotsSpacing="4dp"
            app:dotsWidthFactor="2.5"
            app:selectedDotColor="@color/purple_700"

            />

        <com.google.android.material.button.MaterialButton
        android:id="@+id/btNext"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/purple_200"
        android:textSize="14sp"
        app:cornerRadius="50dp"
        app:strokeWidth="1dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btStart"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="22dp"
        android:visibility="gone"
        android:backgroundTint="@color/purple_200"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="50dp" />


    </LinearLayout>

</RelativeLayout>