<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="260dp"
        android:layout_height="280dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_centerInParent="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">




                <ImageView
                    android:id="@+id/ivLog"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/successfully"
                    android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/we_have_sent_you_n_a_password_reset_link"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/check_your_inbox_for_further_instructions"
                android:textColor="@color/grey_text"
                android:textSize="13sp"
                android:textStyle="bold" />






            <com.google.android.material.button.MaterialButton
                android:id="@+id/btLogin"
                android:layout_width="170dp"
                android:layout_height="55dp"
                android:layout_marginTop="35dp"
                android:layout_gravity="center"
                app:strokeColor="@color/purple_700"
                app:strokeWidth="2dp"
                android:backgroundTint="@color/white"
                android:text="@string/back_to_login"
                app:cornerRadius="18dp"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />





        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>