<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ResetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/enter_a_new_password_for_this_account"
            android:textColor="@color/grey_text"
            android:textSize="13sp"
            android:textStyle="bold" />



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivPass"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:padding="8dp"
                android:src="@drawable/password" />


            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/ivPass"
                android:background="@null"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLength="60"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_text"
                android:textSize="14sp" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/ivConfirmPass"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="start"
                    android:layout_marginStart="15dp"
                    android:padding="8dp"
                    android:src="@drawable/password" />



                <EditText
                    android:id="@+id/etConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:layout_toEndOf="@+id/ivConfirmPass"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layout_marginStart="5dp"
                    android:maxLength="60"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_text"
                    android:textSize="14sp" />


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btReset"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="50dp"
            app:iconGravity="textStart"
            app:iconSize="25dp" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>