<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/purple_700">

                <ImageView
                    android:id="@+id/ivbt"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/tittle" />

                <ImageView
                    android:id="@+id/ivTask"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_toStartOf="@+id/ivNotification"
                    android:padding="6dp"
                    android:src="@drawable/mytask" />

                <ImageView
                    android:id="@+id/ivNotification"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:padding="6dp"
                    android:src="@drawable/notification" />


            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImg"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/profi">

                    </de.hdodenhof.circleimageview.CircleImageView>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_toEndOf="@+id/profileImg">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hi, Jalica"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txName"
                            android:text="@string/your_progress_so_far"
                            android:textColor="@color/grey_text"
                            android:textSize="13sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tx"
                            android:text="12, February"
                            android:textColor="@color/grey_text"
                            android:textSize="12sp" />

                    </RelativeLayout>


                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentEnd="true"
                        style="@style/CircularDeterminateProgressBar"
                        android:progressDrawable="@drawable/circle" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txViewProgress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:gravity="center_horizontal"
                            android:text="10"
                            android:layout_marginTop="40dp"
                            android:layout_marginEnd="45dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/purple_700"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </RelativeLayout>


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/rlTap"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="Today"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivPending"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toStartOf="@+id/txHold"
                    android:src="@drawable/wirelessnetwork"
                    app:tint="@color/grey_text" />



                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txHold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/tap_and_hold_the_card_for_more_options"
                    android:textColor="@color/grey_text"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/notask" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/you_have_nothing_aligned_for_tomorrow"
                    android:textColor="@color/grey_text"
                    android:textSize="13sp"
                    android:textStyle="normal" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:id="@+id/add"
                    android:text="@string/click_here_to_add_something"
                    android:textColor="@color/purple_700"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>